# FP-game-of-life

./: README.md
game_of_life/backend/: .gitignore  mix.exs
game_of_life/backend/config/: config.exs  dev.exs  prod.exs  test.exs
game_of_life/backend/lib/: game_of_life.ex
game_of_life/backend/lib/game_of_life/: application.ex  board.ex  endpoint.ex  examples.ex
game_of_life/backend/test/controllers/: page_controller_test.exs
game_of_life/backend/test/support/: channel_case.ex  conn_case.ex
game_of_life/backend/test/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
game_of_life/backend/web/: router.ex  web.ex
game_of_life/backend/web/channels/: user_socket.ex  visualization_channel.ex
game_of_life/backend/web/controllers/: page_controller.ex
game_of_life/backend/web/static/js/: app.js  socket.js
game_of_life/backend/web/templates/layout/: app.html.eex
game_of_life/backend/web/templates/page/: index.html.eex
game_of_life/backend/web/views/: error_view.ex  layout_view.ex  page_view.ex
game_of_life/frontend/: .gitignore  build.sbt  update_frontend.sh  update_frontend_dev.sh
game_of_life/frontend/src/main/scala/pl/edu/agh/fp2017/: Board.scala  CaveWebVisualization.scala  Contract.scala  GameOfLifeVisualization.scala  Implicits.scala  Renderer.scala
game_of_life/frontend/src/main/scala/pl/edu/agh/fp2017/phoenix/: Channel.scala  Push.scala  Socket.scala
hs-exercises/: hs-exercises.cabal  stack.yaml
hs-exercises/test/: ApplicativeTests.hs  FunctorTests.hs  MainTestSuite.hs  MonadTests.hs
