name:                hs-exercises
version:             1.0.0

build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hs-exercises-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hs-exercises
  default-language:    Haskell2010

test-suite hs-exercises-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       FunctorTests
                     , MonadTests
  main-is:             MainTestSuite.hs
  build-depends:       base
                     , hs-exercises
                     , HUnit
                     , QuickCheck
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
